[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_001.png" type="Texture" id=1]
[ext_resource path="res://Scenes/characters/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_010.png" type="Texture" id=3]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_009.png" type="Texture" id=4]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_004.png" type="Texture" id=5]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_005.png" type="Texture" id=6]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_006.png" type="Texture" id=7]
[ext_resource path="res://Assets/textures/Player/Walking/Wraith_03_Moving Forward_000.png" type="Texture" id=8]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_008.png" type="Texture" id=9]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_003.png" type="Texture" id=10]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_000.png" type="Texture" id=11]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_007.png" type="Texture" id=12]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_011.png" type="Texture" id=13]
[ext_resource path="res://Assets/textures/Player/Idle/Wraith_03_Idle_002.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96.6667, 133.333 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 100, 136.667 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Respiração"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 13 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="." groups=["player"]]
scale = Vector2( 0.907569, 0.907569 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2( 3.33334, -3.97364e-06 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.33333, 0 )
shape = SubResource( 2 )

[node name="tempo_recarga" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="tempo_recarga_col" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Respiração"
anims/RESET = SubResource( 3 )
"anims/Respiração" = SubResource( 4 )

[node name="Invincibility_Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="tempo_recarga" to="." method="_on_tempo_recarga_timeout"]
[connection signal="timeout" from="tempo_recarga_col" to="." method="_on_tempo_recarga_col_timeout"]
[connection signal="timeout" from="Invincibility_Timer" to="." method="_on_Invincibility_Timer_timeout"]
